--- a/index.html
+++ b/index.html
@@ -137,6 +137,77 @@
             <section class="divider"></section>
             <footer id="footer">
                 <h3>Questions? Call 1-844-505-2993</h3>
+                <div class="footer-column-container">
+                    <div class="footer-column">
+                        <ul>
+                            <li>
+                                <a href="">FAQ</a>
+                            </li>
+                            <li>
+                                <a href="">Investor Relations</a>
+                            </li>
+                            <li>
+                                <a href="">Ways to Watch</a>
+                            </li>
+                            <li>
+                                <a href="">Corporate Information</a>
+                            </li>
+                            <li>
+                                <a href="">Netflix Originals</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="footer-column">
+                        <ul>
+                            <li>
+                                <a href="">Help Center</a>
+                            </li>
+                            <li>
+                                <a href="">Jobs</a>
+                            </li>
+                            <li>
+                                <a href="">Terms of Use</a>
+                            </li>
+                            <li>
+                                <a href="">Contact Us</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="footer-column">
+                        <ul>
+                            <li>
+                                <a href="">Account</a>
+                            </li>
+                            <li>
+                                <a href="">Redeem Gift Cards</a>
+                            </li>
+                            <li>
+                                <a href="">Privacy</a>
+                            </li>
+                            <li>
+                                <a href="">Speed Test</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="footer-column">
+                        <ul>
+                            <li>
+                                <a href="">Media Center</a>
+                            </li>
+                            <li>
+                                <a href="">Buy Gift Cards</a>
+                            </li>
+                            <li>
+                                <a href="">Cookie Preferences</a>
+                            </li>
+                            <li>
+                                <a href="">Legal Notices</a>
+                            </li>
+                        </ul>
+                    </div>
+
+                </div>
+            
             </footer>
 
 
