fixed path files

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="https://kit.fontawesome.com/81055fc81e.js" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="/css/style.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
             <section id="hero-section">
                 <div class="hero-nav">
-                    <img src="/img/logo.png" alt="Netflix logo">
+                    <img src="img/logo.png" alt="Netflix logo">
                     <a href="#">Sign In</a>
                 </div>
                 <div class="text-wrapper">
@@ -32,7 +32,7 @@
                     <h3>Watch on Smart TVs, Playstation, Xbox, Chromecast, Apple TV, Blu-ray players, and more.</h3>
                 </div>
                 <div class="tv-right">
-                    <img src="/img/tv-2.png" alt="Watch on TV">
+                    <img src="img/tv-2.png" alt="Watch on TV">
                 </div>
             </section>
 
@@ -40,7 +40,7 @@
 
             <section id="download">
                 <div class="download-left">
-                    <img src="/img/mobile&tablet.png" alt="">
+                    <img src="img/mobile&tablet.png" alt="">
                 </div>
                 <div class="download-right">
                     <h1>Download your shows to watch on the go.</h1>
@@ -56,7 +56,7 @@
                     <h3>Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV without paying more.</h3>
                 </div>
                 <div class="everywhere-right">
-                    <img src="/img/all-devices.png" alt="Watch on TV">
+                    <img src="img/all-devices.png" alt="Watch on TV">
                 </div>
             </section>
 
@@ -137,8 +137,8 @@
             <section class="divider"></section>
             <footer id="footer">
                 <h3>Questions? Call 1-844-505-2993</h3>
-                <div class="footer-column-container">
-                    <div class="footer-column">
+                <div class="footer-links">
+                    <div class="footer-column1">
                         <ul>
                             <li>
                                 <a href="">FAQ</a>
@@ -157,7 +157,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="footer-column">
+                    <div class="footer-column2">
                         <ul>
                             <li>
                                 <a href="">Help Center</a>
@@ -166,14 +166,14 @@
                                 <a href="">Jobs</a>
                             </li>
                             <li>
-                                <a href="">Terms of Use</a>
+                                <a href="">Terms Of Use</a>
                             </li>
                             <li>
                                 <a href="">Contact Us</a>
                             </li>
                         </ul>
                     </div>
-                    <div class="footer-column">
+                    <div class="footer-column3">
                         <ul>
                             <li>
                                 <a href="">Account</a>
@@ -189,7 +189,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="footer-column">
+                    <div class="footer-column4">
                         <ul>
                             <li>
                                 <a href="">Media Center</a>
@@ -205,13 +205,7 @@
                             </li>
                         </ul>
                     </div>
-
-                </div>
-            
+                </div>    
             </footer>
-
-
-
-        <script src="" async defer></script>
     </body>
 </html>
